--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,16 +124,19 @@
   <data name="лог" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\лог.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="заметка" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icons\заметка.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="код" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\код.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="письмо" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\письмо.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="код" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\icons\код.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="отчет" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\отчет.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="заметка" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\заметка.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="add_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\add_16x16.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
